data/derived/sp14/progs/unify/prog3567.ml.out
Characters 91-101:
  digits @ (n mod 10);;
           ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
